--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@github/relative-time-element": "^4.4.5",
     "@prisma/client": "^6.3.1",
+    "@types/": "github/relative-time-element",
     "@types/lodash": "^4.17.15",
     "@vercel/blob": "^0.27.1",
     "clsx": "^2.1.1",
